# bib-parser

./: CMakeLists.txt  README.md
cmd/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BIB_Parser_Command.sln  CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  (+3 more)
pkg/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BIB_Parser_Package.sln  CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  bib-parser-package.vcxproj  bib-parser-package.vcxproj.filters  cmake_install.cmake
pkg/bib-parser-package.dir/Debug/: bib-parser-package.vcxproj.FileListAbsolute.txt
pkg/bib-parser-package.dir/Debug/bib-pars.C932C93E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
pkg/include/bib-parser/bibliography/: entry-type.h  field-type.h  reference.h  serializer.h  sorter.h
pkg/include/bib-parser/core/: error.h  html-rule.h  parser.h  pdf-rule.h  serializer-dependencies.h  serializer.h  sorter.h  translation-table-rule.h  translation-table.h  types.h  util.h  xml-rule.h
pkg/include/bib-parser/translation/: html-rule.h  pdf-rule.h  translation-table-rule.h  translation-table.h  xml-rule.h
pkg/src/bibliography/: entry-type.cc  field-type.cc  reference.cc  serializer.cc  sorter.cc
pkg/src/core/: error.cc  log.h  parser.cc  serializer.cc  sorter.cc  translation-table.cc  util.cc
pkg/src/translation/: html-rule.cc  pdf-rule.cc  translation-table.cc  xml-rule.cc
test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Bib_Parser_Test.sln  CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  bib-parser-test.vcxproj  bib-parser-test.vcxproj.filters  cmake_install.cmake
test/bib-parser-test.dir/Debug/bib-parser-test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  bib-parser-test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
test/data/: example.html  example.ini  style.ini
test/src/: entry-type.cc  reference.cc  serializer.cc  sorter.cc  test.cc  util.cc
(+28 files in other folders)
